chore: sonar lints